@@ -1,5 +1,7 @@
 Release 1.24 - ???
 
+   * Add an optional Preflight parser for PDFs (TIKA-3055).
+
    * Improve detection of some zip-based formats (TIKA-3057).
 
    * Upgrade metadata-extractor to 2.13.0 (TIKA-2952).
